icon text out of view fixed

--- a/src/styles/controllers.scss
+++ b/src/styles/controllers.scss
@@ -27,4 +27,16 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  //Firts and last icon text get out of view
+  .controller:first-child .icon-text {
+    left: 0;
+    transform: translateY(-50%);
+  }
+
+  .controller:last-child .icon-text {
+    left: auto;
+    right: 0;
+    transform: translateY(-50%);
+  }
 }
